Adiciona funcionalidade de pesquisar personagens pelo nome

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>API Rick and Morty</title>
 </head>
 <body>
+  <form action="">
+    <input class="pesquisa" type="text">
+    <button class="procurar">Search</button>
+  </form>
   <div class="botoes">
     <button class="prev">Prev</button>
     <button class="next">Next</button>
