Adiciona logo e altera alguns estilos

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <title>API Rick and Morty</title>
 </head>
 <body>
+  <img src="./logo-rick-and-morty.png" alt="">
   <form action="">
-    <input class="pesquisa" type="text">
+    <input class="pesquisa" type="text" placeholder="Search characters">
     <button class="procurar">Search</button>
   </form>
   <div class="botoes">
