Permite a busca por status ou espécie

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>API Rick and Morty</title>
 </head>
 <body>
-  <img src="./logo-rick-and-morty.png" alt="">
+  <img class="logo" src="./logo-rick-and-morty.png" alt="">
   <form action="">
-    <input class="pesquisa" type="text" placeholder="Search characters">
+    <input class="pesquisa" type="text" placeholder='Ex: "Rick", "Dead", "Human"'>
     <button class="procurar">Search</button>
   </form>
   <div class="botoes">
