--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <img class="logo" src="./logo-rick-and-morty.png" alt="">
   <form action="">
     <input class="pesquisa" type="text" placeholder='Ex: "Rick", "Dead", "Human"'>
-    <button class="procurar">Search</button>
+    <button class="pesquisar">Search</button>
   </form>
   <div class="botoes">
     <button class="prev">Prev</button>
