--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>API Rick and Morty</title>
 </head>
 <body>
@@ -13,10 +13,10 @@
     <input class="pesquisa" type="text" placeholder='Ex: "Rick", "Dead", "Human"'>
     <button class="pesquisar">Search</button>
   </form>
-  <div class="botoes">
+  <nav class="botoes">
     <button class="prev">Prev</button>
     <button class="next">Next</button>
-  </div>
+  </nav>
   <section class="personagens"></section>
 
   <script src="script.js"></script>
